# claude-export-db

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
specs/: 00-overview.md  01-data-format.md  02-sqlite-schema.md  03-cli-design.md  04-output-formats.md  05-error-handling.md  06-testing.md
src/claude_export_db/: cli.py  models.py  parser.py
src/claude_export_db/writers/: __init__.py  json_.py  markdown.py  parquet.py  sqlite.py
tests/: conftest.py  test_cli.py  test_parser.py  test_writer_json.py  test_writer_markdown.py  test_writer_sqlite.py
